# runtime

./: .gitmodules  CMakeLists.txt  gnutls.patch  metadata.json  runtime.reg  shell.nix
cassiapp/app/: build.gradle.kts
cassiapp/app/src/androidTest/java/com/cassia/: ExampleInstrumentedTest.kt
cassiapp/app/src/main/: AndroidManifest.xml
cassiapp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
cassiapp/app/src/main/cpp/cassiasrv/: CMakeLists.txt  nekomposite.cpp  vk_helpers.cpp
cassiapp/app/src/main/java/com/cassia/: MainActivity.kt
cassiapp/app/src/main/res/layout/: activity_main.xml
cassiapp/app/src/main/res/values/: themes.xml
cassiapp/app/src/main/res/values-night/: themes.xml
cassiapp/app/src/test/java/com/cassia/: ExampleUnitTest.kt
cassiapp/gradle/wrapper/: gradle-wrapper.properties
libaresolv/: CMakeLists.txt  aresolv.pc.in
libaresolv/include/: aresolv.h  resolv_private.h
libaresolv/include_private/: NetdClientDispatch.h  namespace.h  netbsd-compat.h
libaresolv/include_private/isc/: dst.h  eventlib.h
libaresolv/include_private/private/: bionic_defs.h
libaresolv/src/nameser/: ns_print.c
libaresolv/src/resolv/: res_debug.c
meson_cross_files/: i686-w64-mingw32.txt  x86_64-w64-mingw32.txt
patches/alsa-lib/: 0001-configure-m4-Remove-explicit-lpthread.patch  0002-autogen-Add-autogen.sh.patch
patches/libtasn1/: remove-tests.patch
patches/nettle/: fix-libdir.patch
patches/p11-kit/: 0001-build-Remove-exe_wrapper-in-MinGW64-crossfile.patch
